--- a/MachineLearning/6集成学习.md
+++ b/MachineLearning/6集成学习.md
@@ -235,3 +235,99 @@ $$
 \sum_{i=1}^T \omega_i \int A(h_i | \mathbf{x}) p(\mathbf{x})d\mathbf{x}
 = \sum_{i=1}^T \omega_i \int E(h_i | \mathbf{x}) p(\mathbf{x})d\mathbf{x} - \int E(H |\mathbf{x})p(\mathbf{x})d\mathbf{x}
 $$
+类似的，个体学习器hi 在全样本上的泛化误差和分歧项分别为：
+$$
+\begin{align}
+E_i = \int E(h_i | \mathbf{x}) p(\mathbf{x}) d\mathbf{x} \\
+A_i = \int A(h_i | \mathbf{x}) p(\mathbf{x}) d\mathbf{x}
+\end{align}
+$$
+集成的泛化误差为
+$$
+E = \int E(H | \mathbf{x}) p(\mathbf{x}) d\mathbf{x}
+$$
+将以上3 个式子代入式(27) 中，令$\bar E = \sum_{i=1}^T \omega_i E_i$ 表示个体学习器泛化误差的加权平均，$\bar A = \sum_{i=1}^T \omega_i A_i$ 表示个体学习器的加权分歧值，则有
+$$
+E = \bar E - \bar A
+$$
+这个式子表明，个体学习器准确性越高，多样性越大，集成越好。
+
+但式(31) 很难应用在实际中。因为它是定义在整个样本空间上的，、。而且$\bar A$ 不是一个可直接操作的多样性度量，只能继承构造好后才能估计。此外，以上推导过程只能用于回归学习，难以直接推广到分类任务上。
+
+### 多样性度量
+
+*多样性度量* (diversity measure) 是用于**度量集成中个体分类器的多样性**。典型做法是考虑个体分类器的**两两相似/不相似性**。
+
+对分类器hi 和hj 的预测结果列联表 (contingency table) 为
+
+|            | $h_i = 1$ | $h_i = -1$ |
+| ---------- | --------- | ---------- |
+| $h_j = 1$  | a         | c          |
+| $h_j = -1$ | b         | d          |
+
+这里，a + b + c + d = m。
+
+- 不合度量 (disagreement measure)：值域为 [0, 1]，值越大则多样性越大。
+
+$$
+dis_{ij} = \frac{b + c}{m}
+$$
+
+- 相关系数 (correlation coefficient)：值域为[-1, 1]，若hi 和hj 无关则为0，正相关为正，否则为负。
+
+$$
+\rho _{ij} = \frac{ad - bc}{\sqrt{(a + b) (a + c) (c + d) (b + d)}}
+$$
+
+- Q -统计量 (Q - statistic)：Qij 与相关系数的符号相同，且$|Q_{ij}| \le |\rho_{ij}|$。
+
+$$
+Q_{ij} = \frac{ad - bc}{ad + bc}
+$$
+
+- k -统计量 (k - statistic)：
+
+$$
+\kappa = \frac{p_1 - p_2}{1 - p_2}
+$$
+
+其中，p~1~ 是两个分类器取得一致的概率；p~2~ 是两个分类器**偶然达成一致**的概率：
+$$
+\begin{align}
+p_1 & = \frac{a + d}{m} \\
+p_2 & = \frac{(a+b)(a+c) + (c+d)(b+d)}{m^2}
+\end{align}
+$$
+若分类器hi 和hj 在D 上完全一致，则k = 1；若他们仅是偶然达成一致，k = 0。k 通常为非负值，仅在hi 和hj 达成一致的概率甚至于低于偶然性的情况下取负值。
+
+下图是*k -误差图*，是将每一对分类器作为图上的一个点。横坐标是k 值，纵坐标是它们的平均误差。显然，数据点云的位置越高，个体分类器的准确性越低；点云位置越靠右，则个体分类器的多样性越小。
+
+![幕快照 2018-03-17 16.42.4](../../../../../Downloads/屏幕快照 2018-03-17 16.42.43.png)
+
+### 多样性增强
+
+增强多样性的常见做法有对数据样本、输入属性、输出表示和算法参数进行扰动。
+
+#### 数据样本扰动
+
+数据样本扰动通常是基于**采样法**，如在Bagging 中食用自助采样，在Adaboost 中食用序列采样。但数据样本扰动只对**不稳定基学习器**有效，如决策树，神经网络等。而稳定学习器**如线形学习器，SVM等，对数据样本扰动不敏感。
+
+#### 输入属性扰动
+
+训练样本通常由一组属性描述，从不同的*子空间*，即属性子集，训练出的个体学习器必然有所不同。**随机子空间算法** (random subspace) 从初识属性集中抽取出若干个属性集，在基于每个属性子集训练一个基学习器。如下图所示。
+
+![幕快照 2018-03-17 17.06.2](../../../../../Downloads/屏幕快照 2018-03-17 17.06.23.png)
+
+**优点**：对包含大量冗余属性的数据，在子空间中训练个体学习器不仅能产生多样性大的个体，还会因属性数的减少而大幅节省时间开销；同时，由于冗余属性多，减少一些属性后训练出的个体学习器也不至于太差。
+
+#### 输出表示扰动
+
+此类做法的**基本思路**是对输出表示进行操纵以增强多样性。可对训练样本的类别标记稍作变动，如**翻转法** (flipping output) 随机改变一些训练样本的标记；也可以对输出表示进行转化，如**输出调制法** (output smearing) 将分类输出转化为回归输出后构建个体学习器。此外还有**ECOC法**等等。
+
+#### 算法参数扰动
+
+基学习算法一般都有参数需进行设置，通过随机设置不同的参数，往往可产生差别较大的个体学习器。对参数较少的算法，可通过将其学习过程中某些环节用其他类似方式代替，从而达到扰动的目的，如决策树中的属性选择。
+
+此外，使用单一 学习器时通常需使用交叉验证等方法来确定参数值，这事实上已使用了不同参数训练出多个学习器，只不过最终仅选择其中一个学习器进行使用，而集成学习则相当于把这些学习器都利用起来。
+
+最后，不同的多样性增强机制可以同时使用。随机森林就使用了 数据样本扰动和输入属性扰动。
