--- a/MachineLearning/6集成学习.md
+++ b/MachineLearning/6集成学习.md
@@ -302,7 +302,7 @@ $$
 
 下图是*k -误差图*，是将每一对分类器作为图上的一个点。横坐标是k 值，纵坐标是它们的平均误差。显然，数据点云的位置越高，个体分类器的准确性越低；点云位置越靠右，则个体分类器的多样性越小。
 
-![幕快照 2018-03-17 16.42.4](../../../../../Downloads/屏幕快照 2018-03-17 16.42.43.png)
+![幕快照 2018-03-17 16.42.4](6/屏幕快照 2018-03-17 16.42.43.png)
 
 ### 多样性增强
 
@@ -316,7 +316,7 @@ $$
 
 训练样本通常由一组属性描述，从不同的*子空间*，即属性子集，训练出的个体学习器必然有所不同。**随机子空间算法** (random subspace) 从初识属性集中抽取出若干个属性集，在基于每个属性子集训练一个基学习器。如下图所示。
 
-![幕快照 2018-03-17 17.06.2](../../../../../Downloads/屏幕快照 2018-03-17 17.06.23.png)
+![幕快照 2018-03-17 17.06.2](6/屏幕快照 2018-03-17 17.06.23.png)
 
 **优点**：对包含大量冗余属性的数据，在子空间中训练个体学习器不仅能产生多样性大的个体，还会因属性数的减少而大幅节省时间开销；同时，由于冗余属性多，减少一些属性后训练出的个体学习器也不至于太差。
 
