--- a/MachineLearning/6集成学习.md
+++ b/MachineLearning/6集成学习.md
@@ -12,7 +12,11 @@
 
 **同质集成**中的个体学习器亦称*基学习器* (base learner)，相应的学习算法称为*基学习算法* (base learning algorithm)；**异质集成**中的个体学习器由不同的学习算法生成，称为*组件学习器*。
 
-要获得好的集成，个体学习器应该*好而不同*，即个体学习器要有一定的准确性，不能太坏，并且要有多样性，即学习器之间具有差异。
+要获得好的集成，个体学习器应该*好而不同*，即个体学习器要有一定的准确性，不能太坏，并且要有多样性，即学习器之间具有差异。（差异主要是希望不同类型的学习器会产生不同类型的错误，从而一个学习器的错误会被另一个“纠正”。）
+
+通常，集成方法较之一个利用完整训练集训练的基学习器而言，会具有类似的偏差但会有更低的方差。由下图所示，单个决策树和Bagging 在相同的训练集上都会出现类似的错误，但显然Bagging 的决策边界更加平滑，会有更好的泛化性能。
+
+![ecision_tree_without_and_with_bagging_plo](6/decision_tree_without_and_with_bagging_plot.png)
 
 考虑二分类问题$y \in \{-1,+1\}$ 和真实标记函数f，假定基分类器的错误率为$\epsilon$，数学表示为：
 $$
@@ -186,7 +190,7 @@ $$
 现实任务中，不同类型的个体学习器可能产生**不同类型**的h 值，常见的有：
 
 - 类标记：$h_i^j(\mathbf{x}) \in \{0, 1\}$，即预测类别标记为1，称为*硬投票*；
-- 类概率：$h_i^j(\mathbf{x}) \in [0,1]$，相当于对后验概率$P(c_j|\mathbf{x})$ 的一个估计，称为*软投票*。
+- 类概率：$h_i^j(\mathbf{x}) \in [0,1]$，相当于对后验概率$P(c_j|\mathbf{x})$ 的一个估计，称为*软投票*。（通常，软投票会取得比硬投票更高的精度，因为软投票 gives more weight to highly confident votes。）
 
 ### 学习法
 
