--- a/MachineLearning/6集成学习.md
+++ b/MachineLearning/6集成学习.md
@@ -334,4 +334,4 @@ $$
 
 此外，使用单一 学习器时通常需使用交叉验证等方法来确定参数值，这事实上已使用了不同参数训练出多个学习器，只不过最终仅选择其中一个学习器进行使用，而集成学习则相当于把这些学习器都利用起来。
 
-最后，不同的多样性增强机制可以同时使用。随机森林就使用了 数据样本扰动和输入属性扰动。
+最后，不同的多样性增强机制可以同时使用。随机森林就使用了数据样本扰动和输入属性扰动。这种对于样本进行随机采样（数据样本扰动）又对属性（样本特征）进行采样（输入属性扰动）的算法称为*随机补丁法* (Random Patches method)
