--- a/SLAM/特征点法前端.md
+++ b/SLAM/特征点法前端.md
@@ -102,6 +102,61 @@ $$
 
 ### 本质矩阵
 
+**关于本大节（对极几何）的更详细的讲解和推导推荐看书 An Invitation to 3-D vision 的第五章。这章也正好是sample chapters 之一，可以免费阅读。地址在此[Reconstruction from Two Calibrated Views](http://vision.ucla.edu//MASKS/MASKS-ch5.pdf) .**
+
+本质矩阵$\mathbf{E} = \mathbf{t}^{\wedge} \mathbf{R}$ 是一个3 * 3 大小的矩阵，共9个未知数。它包含了一个相对位置信息t 和一个旋转矩阵R。所有本质矩阵也构成一个集合，具有以下的性质：
+
+- 本质矩阵是由对极约束定义的。由上可知对极约束是一个**等式为零**的约束，所以对E 乘以任意非零常数后，对极约束仍然满足。说明E 在**不同尺度下**是**等价**的。
+- 根据$\mathbf{E} = \mathbf{t}^{\wedge} \mathbf{R}$，本质矩阵E 的奇异值必定是$[\sigma,\sigma,0]^T$ 的形式。这称为**本质矩阵的内在性质**。想要详细的证明还请看上面的章样。
+- 平易和旋转各自有3 个自由度，所以$\mathbf{t}^{\wedge} \mathbf{R}$ 一共只有6个自由度。考虑到尺度等价性，本质矩阵E 实际上只有5个自由度。
+
+既然E 只有5个自由度，说明我们可以只用5对点来对其进行求解。但E 的内在性质是非线性的，只用5对点求解会更麻烦些。考虑E 的尺度等价性，可以使用8对点来求解E。这就是**八点法**。
+
+考虑一对匹配点，它们的**归一化坐标**为$\mathbf{x}_1 = [u_1, v_1,1]^T$ 和$\mathbf{x}_2 = [u_2, v_2,1]^T$。根据对极约束则有：
+$$
+\begin{pmatrix}
+u_1, v_1, 1
+\end{pmatrix}
+\begin{pmatrix}
+e_1 & e_2 & e_3 \\
+e_4 & e_5 & e_6 \\
+e_7 & e_8 & e_9 \\
+\end{pmatrix}
+\begin{pmatrix}
+u_2 \\ v_2 \\ 1
+\end{pmatrix} = 0
+$$
+把矩阵E 展开，写成向量的形式 (stacked version)：
+$$
+\mathbf{e} =[ e_1, e_2, e_3, e_4, e_5, e_6, e_7, e_8, e_9]^T
+$$
+对极约束就可以写成与e 有关的线形形式：
+$$
+[u_1u_2, u_1 v_2, u_1, v_1 u_2, v_1 v_2, v_1, u_2, v_2, 1] \mathbf{e} = 0
+$$
+8个特征点对就构成了一个线性方程组。设系数矩阵为A，它是一个8 * 9 大小的矩阵，e 位于该矩阵的零空间 (Null Space) 中。如果矩阵A 满足秩为8（满秩）的条件（8个点不共面），那么其零空间维度为1，即e 构成一条线，这与e 的尺度等价性是一致的。
+
+求解出E 后，问题就变成了如何从E 中恢复出相机的运动R，t。该过程可以由奇异值分解 (SVD) 得到。且对于任意一个本质矩阵E，有**两组**相对运动 (R, t) 与之对应。同样地，详细证明请看上面的书籍章样。假设E 的SVD 分解为：
+$$
+\mathbf{E} = \mathbf{U} \mathbf{\Sigma} \mathbf{V}^T
+$$
+其中，U, V 是正交阵，$\mathbf{\Sigma}$ 是奇异值矩阵。与E 对应的两组 (R, t) 分别为：
+$$
+\begin{align}
+\mathbf{t}_1^{\wedge} = \mathbf{U} \mathbf{R}_z(\frac{\pi}{2}) \mathbf{\Sigma} \mathbf{U}^T, & \ \mathbf{R}_1 = \mathbf{U} \mathbf{R}^T_z(\frac{\pi}{2}) \mathbf{V}^T \\
+\mathbf{t}_2^{\wedge} = \mathbf{U} \mathbf{R}_z(-\frac{\pi}{2}) \mathbf{\Sigma} \mathbf{U}^T, & \ \mathbf{R}_2 = \mathbf{U} \mathbf{R}^T_z(-\frac{\pi}{2}) \mathbf{V}^T \\
+\end{align}
+$$
+其中，$\mathbf{R}_z(\frac{\pi}{2})$ 表示沿z 轴旋转90度的旋转矩阵。对比上面两个式子可以发现，这两组解其实是以参考帧为中心，绕z 轴呈180度旋转对称的两组解，如下图所示（来自上面推荐的书籍）：
+
+![幕快照 2018-03-25 10.44.4](../../../../../Downloads/屏幕快照 2018-03-25 10.44.40.png)
+
+同时，由于E 可以取任意符号，即 -E 和 E 是等价的，所以对任意一个 t 取负号又取得一个符合条件的解，所以一共有四组符合条件的解。
+
+我们可以将任意一对特征点代入所取得的4组解中，检测该点在两个相机下的深度值。显然物方特征点应该位于两个相机的前方，取两个深度值都为正的解即是正确的解。
+
+最后，使用带有噪声的数据利用线形方程组求解得到的E 可能并不是一个”正确“的解，即奇异值矩阵并不满足E 的内在性质$\mathbf{\Sigma} = diag(\sigma, \sigma, 0)$ 而是$\mathbf{\Sigma} = diag(\lambda_1, \lambda_2, \lambda_3)$，为从大到小的排序。通常的做法是取$\mathbf{\Sigma} = diag(\frac{\lambda_1 + \lambda_2}{2},\ \frac{\lambda_1 + \lambda_2}{2}, 0)$ 或者直接取 (1, 1, 0)。
+
 ### 单应矩阵
 
 ### 补充
