--- a/SLAM/特征点法前端.md
+++ b/SLAM/特征点法前端.md
@@ -159,6 +159,10 @@ $$
 
 ### 单应矩阵
 
+前面我们提到，利用八点法来求解本质矩阵的一个前提是系数矩阵满秩，这也意味着八组特征点不能（近似）落在同一个平面上。但在一些情况中，如无人机俯拍影像，这个假设就不好成立了。此时，可以利用单应矩阵 (Homography) H 来求解相机运动。
+
+
+
 ### 补充
 
 ## 三角测量
