--- a/SLAM/特征点法前端.md
+++ b/SLAM/特征点法前端.md
@@ -161,9 +161,71 @@ $$
 
 前面我们提到，利用八点法来求解本质矩阵的一个前提是系数矩阵满秩，这也意味着八组特征点不能（近似）落在同一个平面上。但在一些情况中，如无人机俯拍影像，这个假设就不好成立了。此时，可以利用单应矩阵 (Homography) H 来求解相机运动。
 
+考虑图像I1 和I2 有一对匹配好的特征点p1 和p2，这些特征点所对应的物方点P 落在同一平面上。以第一张影像的相机坐标系为惯性系，该平面的法向量为n，到惯性系的原点的距离为d，则该平面可以表示为：
+$$
+\mathbf{n}^T \mathbf{P}=d
+$$
+整理得：
+$$
+\frac{\mathbf{n}^T \mathbf{P}}{d} = 1
+$$
+影像I2 相对于影像I1 的运动为 (R, t)，则有：
+$$
+\begin{align}
+\mathbf{P}_2 & = \mathbf{R} \mathbf{P}_1 + \mathbf{t} \\
+ & = \mathbf{R} \mathbf{P}_1 + \mathbf{t} \cdot \frac{\mathbf{n}^T \mathbf{P}_1}{d} \\
+ & = (\mathbf{R} + \frac{\mathbf{t} \mathbf{n}^T}{d}) \cdot \mathbf{P}_1
+\end{align}
+$$
+这样，我们就得到了描述两个相机坐标系下同一物方点的转换关系，把中间括号内的部分抽取出来就得到了单应矩阵H。当然，也可以在括号两端各加上相机矩阵K，得到$\mathbf{K} (\mathbf{R} + \frac{\mathbf{t} \mathbf{n}^T}{d}) \mathbf{K}^{-1}$，这是高博书中的表示方式，描述了两个图像坐标之间的转换关系。
 
+单应矩阵包含了相机运动信息 (R, t) 和对应平面的参数 (n, d)，同样是一个3 * 3 大小的矩阵，同样可以先通过匹配的特征点对计算H 然后将之分解得到平移和旋转。值得注意的是，若相机运动为**纯旋转**，情形仍和单应矩阵相同，因为为$\mathbf{X}_2 = \mathbf{R} \mathbf{X}_1$ 或$\mathbf{x}_1 = \mathbf{K} \mathbf{R} \mathbf{K}^{-1} \mathbf{x}_2$。可见，**旋转矩阵也是单应矩阵的一种**。
+
+由上可得：
+$$
+\begin{pmatrix}
+u_2 \\ v_2 \\ 1
+\end{pmatrix} = 
+\begin{pmatrix}
+h_1 & h_2 & h_3 \\
+h_4 & h_5 & h_6 \\
+h_7 & h_8 & h_9 \\
+\end{pmatrix}
+\begin{pmatrix}
+u_1 \\ v_1 \\ 1
+\end{pmatrix}
+$$
+需要注意的是这里的等号是在一个非零因子下成立的（齐次坐标）。实际处理中常常乘以一个非零因子使得h9 = 1。然后去掉这个非零因子可得：
+$$
+u_2  = \frac{h_1 u_1 + h_2 v_1 + h_3}{h_7 u_1 + h_8 v_1 + h_9} \\
+v_2 = \frac{h_4 u_1 + h_5 v_1 + h_6}{h_7 u_1 + h_8 v_1 + h_9}
+$$
+整理得：
+$$
+h_1 u_1 + h_2 v_1 + h_3 - h_7 u_1 u_2 - h_8 v_1 u_2 = u_2 \\
+h_4 u_1 + h_5 v_1 + h_6 - h_7 u_1 v_2 - h_8 v_1 v_2 = v_2
+$$
+如此，一组匹配点可以构造出两个约束（三组约束中只有两组线性独立）。于是，自由度为8 的单应矩阵可以由4对特征点算出（不存在三点共线的情况）。这种将H 转化为向量形式来直接求解的方式称为直接线性变换 (Direct Linear Transform, DLT)。
+
+和本质矩阵的分解类似，分解单应矩阵H 也会得到4组解（如下所示）。这里的推导比较复杂（我也没看得很明白），还请参看前面的书籍章样。利用物方点的深度值为正（位于相机前方）的特性，可以排除两组解，剩下的两组解则需通过其他先验信息进行验证。
+
+![幕快照 2018-03-27 20.41.4](../../../../../Downloads/屏幕快照 2018-03-27 20.41.41.png)
 
 ### 补充
+
+####尺度不确定性
+
+前面提到，E 具有尺度等价性，由它分解得到的 (R, t) 也具有一个尺度等价性，但由于旋转矩阵R 自身带有约束（行列式为1等），所以只有t 具有一个尺度。换言之，分解E 得到的其实是qt, q 为一个分零因子。而在通过分解H 得到 (R, t) 的时候，由于平面到坐标原点的距离未知，得到的t 同样具有一个尺度等价性。在这种情况下，通常是将t 进行归一化处理，即令其模长为1.
+
+对t 长度的归一化直接导致了**单目视觉的尺度不确定性**。如果对轨迹和地图同时缩放任意倍数，我们得到的图像仍然是一样的。而对两张图像间的平移t 进行归一化相当于**固定尺度**。以t 的长度作为为单位长度，计算相机轨迹和特征点的三维位置。这被称为单目slam 的初始化。初始化后，就可以利用3D - 2D 来计算相机运动了。进行初始化的两张图像必须有一定程度的平移，而后都将以此步的平移为单位。
+
+#### 纯旋转
+
+在只有纯旋转的情况下，我们可以通过H 来秋去旋转。此时由于t = 0，E 也为0。但此时我们无法利用三角测量来计算特征点的空间位置（不构成对极几何）。所以，**单目初始化不能只有纯旋转，必须有一定程度的平移**。
+
+#### 多余匹配
+
+求解E 和H 都只需要用到少量的特征点对。而通过特征提取和匹配，往往能获得远超需要的特征点对。拥有这么多匹配点，在求解E 或H 的过程中当然可以构造一个最小二乘问题。但是，在可能存在**误匹配**的情况下，**随机采样一致性** (RANSAC) 更受青睐。
 
 ## 三角测量
 
