--- a/MachineLearning/7神经网络.md
+++ b/MachineLearning/7神经网络.md
@@ -41,7 +41,9 @@ $$
 
 ![幕快照 2018-03-28 09.51.0](7/屏幕快照 2018-03-28 09.51.09.png)
 
-要解决非线性可分问题，就需要使用多层功能神经元。介于输出层和输入层之间的神经元被称为隐层或隐含层 (hidden layer)。每层神经元与下一层神经元**全互联**，不存在同层连接和跨层连接。这种结构称为*多层前馈神经网络* (multi-layer feedforward neural networkks)。**前馈**并不意味着网络中信号不能向后转，而是指网络拓扑结构上**不存在环或回路**。输入层神经元仅是接受输入，不进行函数处理，隐层与输出层包含功能神经元.
+要解决非线性可分问题，就需要使用多层功能神经元。介于输出层和输入层之间的神经元被称为隐层或隐含层 (hidden layer)。每层神经元与下一层神经元**全互联**，不存在同层连接和跨层连接。这种结构称为*多层前馈神经网络* (multi-layer feedforward neural networkks)。**前馈**并不意味着网络中信号不能向后转，而是指网络拓扑结构上**不存在环或回路**。输入层神经元仅是接受输入，不进行函数处理，隐层与输出层包含功能神经元。
+
+注意到感知机对于数据尺度 (feature scale) 敏感。
 
 神经网络的学习过程，就是根据训练数据来调整神经元之间的**连接权** (connection weight) 以及每个功能神经元的阑值。
 
@@ -203,7 +205,7 @@ $$
 $$
 都有$E(\omega;\theta) \ge E(\omega^*; \theta^*)$ 成立，则$(\omega^*;\theta^*)$ 为**局部最小解**；若对参数空间中的任意$(\omega;\theta)$ 都有$E(\omega;\theta) \ge E(\omega^*; \theta^*)$，则其为**全局最小解**.
 
-显然，**参数空间中梯度为零**的点，只要起误差函数值小于邻点的误差函数值（二阶导数大于0），就只局部极小点。但我们想要的是全局最小。
+显然，**参数空间中梯度为零**的点，只要起误差函数值小于邻点的误差函数值（二阶导数大于0），就只局部极小点。但我们想要的是全局最小。对于多层感知机来说，其目标函数不是一个凸函数。
 
 ![幕快照 2018-03-28 14.26.3](7/屏幕快照 2018-03-28 14.26.35.png)
 
