--- a/MachineLearning/8降维.md
+++ b/MachineLearning/8降维.md
@@ -96,3 +96,10 @@ $\mathbf{W} \in R^{d \times d'}$ 是变换矩阵。可以将之看作是d' 个d 
 
 ## 主成分分析
 
+对于正交属性空间中的样本点，想用一个超平面对所有样本进行恰当的表达。该超平面有如下性质：
+
+- **最近重构性**：样本点到超平面的距离足够近；
+- **最大可分型**：样本点在这个超平面上的投影尽可能分开。
+
+假定数据样本已去中心化，即$\sum_i \mathbf{x}_i = 0$；投影变换后的坐标系为$\mathbf{W} = \{\mathbf{\omega}_1, \ldots, \mathbf{\omega}_d \}$, 其中，w~i~ 是**标准正交基向量**，$||\omega_i || = 1,\ \omega_i^T \omega_j = 0$；将维度降低到d'，样本点x~i~ 的投影为$\mathbf{z}_i = (z_{i1}; \ldots; z_{id'}),\ z_{ij} = \omega_j^T \mathbf{x}_i$ 是x~i~ 在低维坐标系下第j 维的坐标；而重构的$\mathbf{\hat x}_i =\sum_{j=1}^{d'} z_ij \omega_j$。
+
