--- a/MachineLearning/8降维.md
+++ b/MachineLearning/8降维.md
@@ -84,7 +84,7 @@ $$
 $$
 在现实应用中为了有效降维，往往仅需降维后的距离与原始空间中的距离尽可能接近而不必严格相等。所以可取$d' \le d^* \ll d$ 个最大特征值。
 
-![幕快照 2018-03-30 15.52.5](../../../../../Downloads/屏幕快照 2018-03-30 15.52.54.png)
+![幕快照 2018-03-30 15.52.5](8/屏幕快照 2018-03-30 15.52.54.png)
 
 ###线性降维方法
 
@@ -103,3 +103,41 @@ $\mathbf{W} \in R^{d \times d'}$ 是变换矩阵。可以将之看作是d' 个d 
 
 假定数据样本已去中心化，即$\sum_i \mathbf{x}_i = 0$；投影变换后的坐标系为$\mathbf{W} = \{\mathbf{\omega}_1, \ldots, \mathbf{\omega}_d \}$, 其中，w~i~ 是**标准正交基向量**，$||\omega_i || = 1,\ \omega_i^T \omega_j = 0$；将维度降低到d'，样本点x~i~ 的投影为$\mathbf{z}_i = (z_{i1}; \ldots; z_{id'}),\ z_{ij} = \omega_j^T \mathbf{x}_i$ 是x~i~ 在低维坐标系下第j 维的坐标；而重构的$\mathbf{\hat x}_i =\sum_{j=1}^{d'} z_ij \omega_j$。
 
+考虑整个训练集，原样本点x~i~ 和基于投影重构的样本点$\mathbf{\hat x}_i$ 之间的**距离**为：
+$$
+\begin{align}
+\sum_{i = 1}^m \begin{Vmatrix} \sum_{j = 1}^{d'} z_{ij} \omega_j - \mathbf{x}_i \end{Vmatrix}^2_2
+ & = \sum_{i=1}^m \mathbf{z}^T_i \mathbf{z}_i - 2 \sum_{i=1}^m \mathbf{z}_i^T \mathbf{W}^T \mathbf{x}_i + const \\
+ & \propto -tr \begin{pmatrix} \mathbf{W}^T(\sum_{i=1}^m \mathbf{x}_i \mathbf{x}_i^T) \mathbf{W} \end{pmatrix}
+\end{align}
+$$
+依据最近重构性，上式应该被最小化。考虑到$\sum_{i=1}^m \mathbf{x}_i \mathbf{x}_i^T$ 是协方差矩阵，有
+$$
+\min_{\mathbf{W}} \ -tr(\mathbf{W}^T \mathbf{X} \mathbf{X}^T \mathbf{W}) \ \ s.t. \mathbf{W}^T \mathbf{W} = \mathbf{I}
+$$
+这就是PCA 的优化目标。
+
+从最大可分行出发，能得到同样的结果。样本点x~i~ 在子空间的投影为$\mathbf{W}^T \mathbf{x}_i$，若所有样本点的投影能尽可能分开，则应该使投影后的样本点的**方差最大化**。而投影后的样本点的方差为$\sum_i \mathbf{W}^T \mathbf{x}_i \mathbf{x}_i^T \mathbf{W}$，优化目标就可以写为：
+$$
+\max_{\mathbf{W}} \ tr(\mathbf{W}^T \mathbf{X} \mathbf{X}^T \mathbf{W}) \ \ s.t. \mathbf{W}^T \mathbf{W} = \mathbf{I}
+$$
+显然，式(23) 和式(22) 等价。对这两个式子使用*拉格朗日乘子法*可得
+$$
+\mathbf{X} \mathbf{X}^T \mathbf{W} = \lambda \mathbf{W}
+$$
+只需要对协方差矩阵$\mathbf{X} \mathbf{X}^T$ 进行特征值分解（实践中常常对$\mathbf{X}$ 进行SVD 分解），取降序排序后的前d' 个特征值对应的**特征向量**构成$\mathbf{W} = (\omega_1, \ldots, \omega_{d'})$，就是PCA 的解。
+
+![幕快照 2018-03-30 19.40.2](8/屏幕快照 2018-03-30 19.40.23.png)
+
+PCA 也可以看作是逐一选取**方差最大**方向：对协方差矩阵进行特征值分解，取最大特征值对应的特征向量w~1~；再对$\sum_i \mathbf{x}_i \mathbf{x}^T_i - \lambda_1 \omega_1 \omega_1^T$ 进行特征值分解，去最大特征值对应的特征向量w~2~；如此循环。该方法与前述算法等价。
+
+d' 的确定：
+
+- 用户指定；
+- 通过在d' 值不同的低维空间中对k 近邻分类器进行**交叉验证**来选取；
+- 设置**重构阈值**：$\frac{\sum_{i=1}^{d'} \lambda_i}{\sum_{i=1}^d \lambda_i} \ge t$。
+
+PCA 仅仅需要保留W 和样本的**均值向量**即可通过向量加减和矩阵乘法将新样本投影到低维空间中。但最小的d - d' 个特征值的特征向量被**舍弃**了。**影响**：
+
+- 舍弃这部分信息能使样本的**采样密度**增大；
+- 当数据受到噪声影响时，最小的特征值对应的特征向量往往与噪声有关。舍弃能达到**去噪**的效果。
