--- a/SLAM/特征点法前端.md
+++ b/SLAM/特征点法前端.md
@@ -229,6 +229,32 @@ $$
 
 ## 三角测量
 
+在使用对极约束估计了相机运动之后，利用估计而得的相机位姿和匹配点对，可以通过**三角测量**来计算特征点的深度信息。
+
+考虑图像I1 和I2，以I1 为参考，图像I2 的位姿为T12， 表示第二幅影像到第一幅影像的变换关系。相机光心为O1 和O2。现在有特征点对p1 和p2。理论上射线O1p1 和射线O2p2 会在物方空间中交会于一点P。但由于**噪声**的影像，这两条射线往往无法相交，需要利用**最小二乘法**来进行求解。
+
+设x1 和x2 分别为p1 和p2 的归一化坐标，则有：
+$$
+x_1 \mathbf{s}_1 = s2 \mathbf{R}_{12} \mathbf{x}_2 + \mathbf{t}_{12}
+$$
+现在，我们已经通过对极约束的到了R 和t，想要求解两个特征点的深度s1 和s2。先来求s2，对上式两侧坐乘$\mathbf{x}_1^{\wedge}$，有
+$$
+s_1 \mathbf{x}_1^{\wedge} \mathbf{x}_1 = 0 = s_2 \mathbf{x}_1^{\wedge} \mathbf{R} \mathbf{x}_2 + \mathbf{x}_1^{\wedge} \mathbf{t}
+$$
+上式可以看成是s2 的一个方程。但由于噪声的存在，之前求得的R 和t 并不一定使其精确为0。所以更常见的做法是求最小二乘解。
+
+### 补充
+
+三角测量是由**平移**得到的，只有平移才会有对极几何中的三角形 (即三角形O1 O2 P)。因此，纯旋转是无法进行三角测量的，因为此时**对极约束永远满足**。
+
+而当平移存在时，也会出现**三角测量的矛盾**。回顾 *相机与图像* 一讲，深度值$z = \frac{fb}{d}$，这里b 为基线长度，也就是平移t，而b 为视察，反映了特征点的测量精度。假设特征点测量有一个小误差$\delta x$ 时，视线角度会变化一个角度$\delta \theta$，使得深度测量值发生$\delta z$ 的变化。当**平移很小**时，$\delta z$ 的变化较大；而当**平移较大**时，$\delta z$ 将明显变小。如下图所示。
+
+![角测量的矛](三角测量的矛盾.png)
+
+所以，要提高三角测量的精度，一是**提高特征点的提取精度**，亦即提高视差的精度，这也就提高图像的分辨率，但这就会使得图像变大，增加计算成本；二是增大平移量。但这也会使得**图像外观**发生明显变化，可能导致匹配失败。
+
+总而言之，增大平移，可能导致匹配失败；平移太小，则导致三角测量精度不够。这就是三角化的矛盾。
+
 ## PnP
 
 ### 直接线性变换
