--- a/MachineLearning/5决策树.md
+++ b/MachineLearning/5决策树.md
@@ -195,7 +195,9 @@ $$
 
 回归决策树以最小化每个结点的MSE 来划分训练数据，即其试图让训练数据尽可能地靠近预测值。其**代价函数**为：
 $$
-J(k, t_k)=\frac{m_{left}}{m}MSE_{left} + \frac{m_right}{m}MSE_{right}\\
-MSE_{node}=\sum_{i \in node}(\hat y_{node} - y^{(i)})^2,\ \hat y_{node}=\frac{1}{m_{node}}\sum_{i \in node}y^{(i)}
+\begin{align}
+J(k, t_k) & =\frac{m_{left}}{m}MSE_{left} + \frac{m_right}{m}MSE_{right} \\
+MSE_{node} & =\sum_{i \in node}(\hat y_{node} - y^{(i)})^2,\ \hat y_{node}=\frac{1}{m_{node}}\sum_{i \in node}y^{(i)}
+\end{align}
 $$
 和分类决策树相同，若不加限制，回归决策树也倾向与过拟合数据。
