--- a/SLAM/特征点法前端.md
+++ b/SLAM/特征点法前端.md
@@ -257,7 +257,65 @@ $$
 
 ## PnP
 
+PnP (Perspective-n-Point) 是求解3D - 2D 点对运动的一种方法。和摄影测量中的后方交会类似。它描述了当已知n 个3维空间点及其在相片上的2D 投影点时，如何估计相机的位姿。
+
+在特征点的三维位置已知的情况下，那么最少只需要3个点对就可以估计相机的运动（还需要额外一个点对来验证结果）。特征点的3D 位置可以由RGB-D 相机获得，或者由之前的三角化获得。PnP 的求解方法有很多，下面主要介绍直接线性变换 (DLR)，P3P 和非线性优化。
+
 ### 直接线性变换
+
+考虑某个空间点P = (X, Y, Z, 1)^T^。在对应的图像I1 中，对应特征点的**归一化平面**齐次坐标为x1 = (u1, v1, 1)^T^。I1 对应的相机位姿R, t 未知。设 T = [R | t]，则有
+$$
+s \begin{pmatrix} u_1 \\ v_1 \\ 1 \end{pmatrix} = 
+\begin{pmatrix}
+t_1 & t_2 & t_3 & t_4 \\
+t_5 & t_6 & t_7 & t_8 \\
+t_9 & t_{10} & t_{11} & t_{12}
+\end{pmatrix}
+\begin{pmatrix}
+X \\ Y \\ Z \\ 1
+\end{pmatrix}
+$$
+消去s 后可得：
+$$
+\begin{align}
+u_1 & = \frac{t_1 X + t_2 Y + t_3 Z + t_4}{t_9 X + t_{10} Y + t_{11} Z + t_{12}} \\
+v_1 & = \frac{t_5 X + t_6 Y + t_7 Z + t_8}{t_9 X + t_{10} Y + t_{11} Z + t_{12}} \\
+\end{align}
+$$
+定义矩阵T 的行向量为：
+$$
+\mathbf{T} = 
+\begin{pmatrix}
+\mathbf{t}^T_1 \\
+\mathbf{t}^T_2 \\
+\mathbf{t}^T_3
+\end{pmatrix}
+$$
+于是有
+$$
+\begin{align}
+\mathbf{t}^T_1 \mathbf{P} - \mathbf{t}^T_3 \mathbf{P} u_1 & = 0 \\
+\mathbf{t}^T_2 \mathbf{P} - \mathbf{t}^T_3 \mathbf{P} v_1 & = 0
+\end{align}
+$$
+可以看到，每个特征点提供了两个关于T 的线形约束。则有
+$$
+\begin{pmatrix}
+\mathbf{P}^T_1 & 0 & -u_1 \mathbf{P}^T_1 \\
+0 & \mathbf{P}^T_1 & -v_1 \mathbf{P}^T_1 \\
+\vdots & \vdots & \vdots \\
+\mathbf{P}^T_N & 0 & -u_N \mathbf{P}^T_N \\
+0 & \mathbf{P}^T_N & -v_N \mathbf{P}^T_n
+\end{pmatrix}
+\begin{pmatrix}
+\mathbf{t}_1 \\
+\mathbf{t}_2 \\
+\mathbf{t}_3 \\
+\end{pmatrix} = 0
+$$
+由于T 一共有12 个未知量，DLT 最少需要6 对匹配点来求解T。当匹配点对的个数大于6时，也可是使用SVD 等方法对超定方程求最小二乘解。
+
+在DLT 中，我们直接将T 的12个元素当作12 个未知量来求解，而忽略了它们之间的内在联系。对于旋转矩阵R，求得的结果可能并不满足SO3 群的要求。可以利用QR 分解，寻找一个最合适的旋转矩阵R 来近似T 左边3 * 3 的矩阵块。这相当于把计算所得的T 重新投影到SE3 的流形上，转换成旋转和平移两部分。
 
 ### P3P
 
