--- a/SLAM/李群和李代数.md
+++ b/SLAM/李群和李代数.md
@@ -273,11 +273,15 @@ $$
 
 假设某空间点$\mathbf{p}$ 经过了一次变换$\mathbf{T}$，对应的李代数为$\xi$，得到了$\mathbf{T}\mathbf{p}$。给$\mathbf{T}$ 左乘一个微小扰动$\Delta\mathbf{T}$，扰动项的李代数为$\delta\xi=[\delta\rho,\delta\phi]^T$。则有：
 $$
-\frac{\partial(\mathbf{T}\mathbf{p})}{\partial\delta\xi}=\lim_{\delta\xi\to0}\frac{\exp(\delta\xi^\wedge)\exp(\xi^\wedge)\mathbf{p}-\exp(\xi^\wedge)\mathbf{p}}{\delta\xi}=
-\begin{bmatrix}
-\mathbf{I}_{3\times3} & -(\mathbf{R}\mathbf{p}+\mathbf{t})^\wedge_{3\times3} \\
-\mathbf{0}^T_{1\times3} & \mathbf{0}^T_{1\times3}\\
-\end{bmatrix}=(\mathbf{T}\mathbf{p})^\bigodot
+\begin{align}
+\frac{\partial(\mathbf{T}\mathbf{p})}{\partial\delta\xi} & =\lim_{\delta\xi\to0}\frac{\exp(\delta\xi^\wedge)\exp(\xi^\wedge)\mathbf{p}-\exp(\xi^\wedge)\mathbf{p}}{\delta\xi} \\
+ & \approx \lim_{\delta \xi \to 0} \frac{(\mathbf{I} + \delta\xi^\wedge) \exp(\xi^\wedge)\mathbf{p}-\exp(\xi^\wedge)\mathbf{p}}{\delta\xi} \\
+ & = \lim_{\delta \xi \to 0} \frac{\delta \xi^{\wedge} \exp(\xi^{\wedge}) \mathbf{p}}{\delta \xi} \\
+ & =\lim_{\delta \xi \to 0} \frac{\begin{bmatrix} \delta \phi & \delta \rho \\ \mathbf{0}^T &  0 \end{bmatrix} \begin{bmatrix} \mathbf{R} \mathbf{p} + \mathbf{t} \\ 1  \end{bmatrix} }{\delta \xi} \\
+& =\lim_{\delta \xi \to 0} \frac{ \begin{bmatrix} \delta \phi ^{\wedge} (\mathbf{R} \mathbf{p} + \mathbf{t}) + \delta \rho \\ 0 \end{bmatrix}}{\delta \xi} \\
+& =\begin{bmatrix} \mathbf{I}_{3\times3} & -(\mathbf{R}\mathbf{p}+\mathbf{t})^\wedge_{3\times3} \\ \mathbf{0}^T_{1\times3} & \mathbf{0}^T_{1\times3}\\ \end{bmatrix} \\
+& =(\mathbf{T}\mathbf{p})^\bigodot
+\end{align}
 $$
 最后的结果被定义为符号$^\bigodot$ 的一个运算：把一个齐次坐标下的空间点变换成一个4*6 的矩阵。
 
