--- a/SLAM/特征点法前端.md
+++ b/SLAM/特征点法前端.md
@@ -319,6 +319,57 @@ $$
 
 ### P3P
 
+求解PnP 的另一种方法是P3P，该算法仅仅使用3个3D - 2D 匹配点对（和一对验证点对），对数据要求较少。十四讲中的推导主要解决了这篇[文章](https://app.yinxiang.com/shard/s2/nl/4424600/5e9a66e9-a14d-445f-bb76-c174738dbc4d/)（原文无法访问了，这里是保存在印象笔记中的副本）。更加详细的介绍和推导也可以参看这篇[论文](http://www.mmrc.iss.ac.cn/~xgao/paper/ieee.pdf)。这里仅仅做简单介绍。
+
+设3对匹配点对中，物方点为A, B, C，它们在**世界坐标系**中的坐标已知。对应的2D 点为a, b, c（图中分别为u, v, w）。验证点对则为D - d。相机光心为O。
+
+![P3P](P3P.png)
+
+显然，图中的三角形存在对应关系：
+$$
+\Delta Oab (Ouv) - \Delta OAB,\ \ \Delta Obc (Ovw) - \Delta OBC,\ \ \Delta Oac (Ouw) - \Delta OAC
+$$
+先来查看第一对三角形Oab 和OAB，利用**余弦定理**，有：
+$$
+OA^2 + OB^2 - 2OA \cdot OB \cdot \cos(a,b) = AB^2
+$$
+类似的，对于其他两对三角形也有类似的性质。合起来就有：
+$$
+\begin{align}
+OA^2 + OB^2 - 2OA \cdot OB \cdot \cos(a,b) & = AB^2 \\
+OB^2 + OC^2 - 2OB \cdot OC \cdot \cos(b,c) & = BC^2 \\
+OA^2 + OC^2 - 2OA \cdot OC \cdot \cos(a,c) & = AC^2
+\end{align}
+$$
+上面三个式子统一除以$OC^2$，并记x = OA / OC, y = OB / OC，得：
+$$
+\begin{align}
+x^2 + y^2 - 2xy \cos (a, b) & = \frac{AB^2}{OC^2} \\
+y^2 + 1 - 2y \cos(b, c) & = \frac{BC^2}{OC^2} \\
+x^2 + 1 - 2x \cos(a, c) & = \frac{AC^2}{OC^2}
+\end{align}
+$$
+记$v = \frac{AB^2}{OC^2}, uv = \frac{BC^2}{OC^2}, wv = \frac{AC^2}{OC^2}$，有
+$$
+\begin{align}
+x^2 + y^2 -2xy \cos(a,b) - v & = 0\\
+y^2 +1 - 2y \cos (b, c) - uv & = 0 \\
+x^2 + 1 - 2x \cos(a, c) -wv & = 0
+\end{align}
+$$
+将第一个等式中的v 移到右边，并代入后两式可得
+$$
+\begin{align}
+(1 - u) y^2 - u x^2 - 2 y \cos (b, c) + 2 u x y \cos (a, b) + 1 & = 0 \\
+(1 - w) x^2 - w y^2 - 2 x \cos (a, c) + 2 w x y \cos (a, b) + 1 & = 0
+\end{align}
+$$
+由于我们知道2D 点的图像坐标，所以三个余弦角cos(a, b), cos(b, c) 和cos(b, c) 可以计算出来；u 和w 由于是比例关系，可以通过A, B, C 三点的世界坐标算出，变换到相机坐标系下之后，**比值不变**。所以，以上两个等式中只有x 和y 是未知的，会随着相机位姿的变化而变化。所以该方程组是一个二元二次方程组。
+
+求解该方程组比较复杂，详细的理论可以参考以上的两个链接。利用吴消元法，最多可以得到4 组可能解。此时，就可以利用验证点对D - d 来寻找最可能的解。这样就得到了A, B, C 三点在**相机坐标系**下的三维坐标。就可以利用ICP 求解R, t。
+
+除了P3P，还有许多其他方法，如EPnP, UPnP 等等。
+
 ###Bundle Adjustment
 
 ## ICP
