--- a/SLAM/特征点法前端.md
+++ b/SLAM/特征点法前端.md
@@ -372,6 +372,84 @@ $$
 
 ###Bundle Adjustment
 
+除了线性方法之外，如果使用李代数来表示相机位姿，就可以把PnP 问题构建成一个定义于李代数上的非线性最小二乘问题。前面所介绍的各种方法，往往是将相机位姿和空间点位置分开求解，而非线性优化则是把它们都看作是优化变量一起求解。在PnP 中，光束法平差的核心就是**最小化重投影误差**。
+
+假设我们有n 个三维空间点P 及其对应投影p，空间点在世界坐标系下的坐标为P = [X, Y, Z] 而对应投影p 的像素坐标为[u, v]。未知量则是相机的位姿R, t。相应地有：
+$$
+s_i \begin{bmatrix}u_i \\ v_i \\1 \end{bmatrix} =
+\mathbf{K} \exp(\xi^{\wedge })
+\begin{bmatrix}
+X_i \\ Y_i \\ Z_i \\ 1
+\end{bmatrix}
+$$
+矩阵形式为
+$$
+s_i \mathbf{u}_i = \mathbf{K} \exp(\xi^{\wedge}) \mathbf{P}_i
+$$
+实践中，由于噪声的原因，上式并不严格成立，即等式存在误差。而我们的目标就是最小化误差的平方和。
+$$
+\xi ^* =\arg\min_{\xi} \frac{1}{2} \sum_{i=1}^n ||\mathbf{u}_i - \frac{1}{s_i} \mathbf{K} \exp(\xi^{\wedge}) \mathbf{P}_i ||_2^2
+$$
+可以看到，这里的误差项，是观测所得的像素坐标和对应空间点的三维位置根据当前估计都位姿投影到像片上的位置之间的差异，因此称为**重投影误差**。忽略齐次坐标的最后一维，这个误差项是一个二维向量。此外，我们最小化的是**所有点对**重投影误差的平方和，所以最后得到的是一个总体误差最小的结果，而每个点的误差并不会精确为零。
+
+可以看到上式是非线性的，根据之前的介绍，我们要对误差项进行**线性化**处理。
+$$
+\mathbf{e}(\mathbf{x} + \Delta \mathbf{x}) \approx \mathbf{e}(\mathbf{x}) + \mathbf{J} \Delta \mathbf{x}
+$$
+这里的J 是雅可比矩阵。这里，e 是像素坐标之差，显然是二维的；状态量x 则包含两部分：相机位姿（6维）和物方坐标（3维）。所以J 也包含了这两部分的雅可比矩阵，一个是2 * 6 大小，一个是2 * 3 大小。
+
+先考虑误差对于相机位姿的雅可比矩阵。这里需要用到链式法则。这里需要考虑e 是如何计算的（参考式(48)）。
+$$
+e = u - u^{\prime} = u - \mathbf{K} \mathbf{P}^{\prime} = u - \mathbf{K}\mathbf{T}\mathbf{P}
+$$
+其中，P‘ = [X', Y', Z', 1] 是P 变换到相机坐标系下的空间点坐标。对相机位姿T 施加一个扰动，并让e 对其求导可得
+$$
+\frac{\partial e}{\partial \delta \xi} = \frac{\partial e}{\partial u^{\prime}} \cdot \frac{\partial u^{\prime}}{\partial \mathbf{P}^{\prime}} \cdot \frac{\partial (\mathbf{TP})}{\partial \delta \xi}
+$$
+由前可知，
+$$
+\begin{align}
+u^{\prime} & = f_x \frac{X^{\prime}}{Z^{\prime}} + c_x \\
+v^{\prime} & = f_y \frac{Y^{\prime}}{Z^{\prime}} + c_y
+\end{align}
+$$
+可得
+$$
+\frac{\partial u^{\prime}}{\partial \mathbf{P}^{\prime}} =
+\begin{bmatrix}
+\frac{\partial u^{\prime}}{\partial X^{\prime}} & \frac{\partial u^{\prime}}{\partial Y^{\prime}} & \frac{\partial u^{\prime}}{\partial Z^{\prime}} \\
+\frac{\partial v^{\prime}}{\partial X^{\prime}} & \frac{\partial v^{\prime}}{\partial Y^{\prime}} & \frac{\partial v^{\prime}}{\partial Z^{\prime}}
+ \end{bmatrix}
+ = \begin{bmatrix}
+ \frac{f_x}{Z^{\prime}} & 0 & -\frac{f_x X^{\prime}}{Z^{\prime 2}} \\
+ 0 & \frac{f_y}{Z^{\prime}} & -\frac{f_y Y^{\prime}}{Z^{\prime2}}
+ \end{bmatrix}
+$$
+而
+$$
+\frac{\partial (\mathbf{TP})}{\partial \delta \xi} = (\mathbf{TP})^{\bigodot} = 
+\begin{bmatrix}
+\mathbf{I} & -\mathbf{P}^{\prime \wedge} \\
+0^T & 0^T
+\end{bmatrix}
+$$
+对于齐次坐标点P‘，我们只关心其前三维，将之取出，可得
+$$
+\frac{\partial (\mathbf{P}^{\prime})}{\partial \delta \xi} =
+\begin{bmatrix}
+\mathbf{I} & -\mathbf{P}^{\prime \wedge} \\
+\end{bmatrix}
+$$
+将各个求导结果相乘，即可得
+$$
+\frac{\partial e}{\partial \delta \xi} = -
+\begin{bmatrix}
+\frac{f_x}{Z^{\prime}} & 0 & - \frac{f_x X^{\prime}}{Z^{\prime 2}} & - \frac{f_x X^{\prime} Y^{\prime}}{Z^{\prime 2}} & f_x + \frac{f_x X^2}{Z^{\prime 2}} & - \frac{f_x Y^{\prime}}{Z^{\prime}} \\
+0 & \frac{f_y}{Z^{\prime}} & -\frac{f_y Y^{\prime}}{Z^{\prime 2}} & -f_y - \frac{f_y Y^{\prime 2}}{Z^{\prime 2}} & \frac{f_y X^{\prime} Y^{\prime}}{Z^{\prime 2}} & \frac{f_y X^{\prime}}{Z^{\prime}}
+\end{bmatrix}
+$$
+注意到前面半部分是e 关于平移的导数，而后半部分是e 关于旋转的导数。
+
 ## ICP
 
 ### SVD
