--- a/SLAM/特征点法前端.md
+++ b/SLAM/特征点法前端.md
@@ -448,11 +448,53 @@ $$
 0 & \frac{f_y}{Z^{\prime}} & -\frac{f_y Y^{\prime}}{Z^{\prime 2}} & -f_y - \frac{f_y Y^{\prime 2}}{Z^{\prime 2}} & \frac{f_y X^{\prime} Y^{\prime}}{Z^{\prime 2}} & \frac{f_y X^{\prime}}{Z^{\prime}}
 \end{bmatrix}
 $$
-注意到前面半部分是e 关于平移的导数，而后半部分是e 关于旋转的导数。
+这个雅可比矩阵描述了重投影误差关于相机位姿李代数的一阶变化关系。注意到前面半部分是e 关于平移的导数，而后半部分是e 关于旋转的导数。
+
+为了优化空间点的位置，我们还需要e 关于空间点P 的导数。同样，根据链式法则有：
+$$
+\frac{\partial e}{\partial \mathbf{P}} = \frac{\partial e}{\partial u^{\prime}} \cdot \frac{\partial u^{\prime}}{\partial \mathbf{P}^{\prime}} \cdot \frac{\partial \mathbf{P}^{\prime}}{\partial \mathbf{P}}
+$$
+前面两项已经算过了，而$\mathbf{P}^{\prime} = \mathbf{R} \mathbf{P} + \mathbf{t}$。所以
+$$
+\frac{\partial \mathbf{P}^{\prime}}{\partial \mathbf{P}} = \mathbf{R}
+$$
+最后，
+$$
+\frac{\partial e}{\partial \mathbf{P}} = -
+\begin{bmatrix}
+\frac{f_x}{Z^{\prime}} & 0 & -\frac{f_x X^{\prime}}{Z^{\prime 2}} \\
+ 0 & \frac{f_y}{Z^{\prime}} & -\frac{f_y Y^{\prime}}{Z^{\prime2}}
+\end{bmatrix}
+\mathbf{R}
+$$
+至此，我们就求得了重投影误差关于相机位姿和空间点的导数，可以通过高斯牛顿法或列文伯格-马夸尔特法来进行优化。
 
 ## ICP
 
+如果对两幅RGB - D 图像进行了特征匹配，由于通过RGB - D 图像可以较为轻松地获得特征点在对应**相机坐标系**下的三维坐标，我们就得到了一组匹配好的3维点：
+$$
+\mathbf{P} = \{\mathbf{p}_1, \ldots, \mathbf{p}_n \},\ \mathbf{P}^{\prime} = \{ \mathbf{p}^{\prime}_1, \ldots, \mathbf{p}^{\prime} _n\}
+$$
+我们的目标是找到一个欧式变换R, t，使得
+$$
+\forall i, \mathbf{p}_i = \mathbf{R} \mathbf{p}^{\prime}_i + \mathbf{t}
+$$
+这个问题可是使用**迭代最近点** (ICP) 来求解。而ICP 的求解也分两种方式：
+
+1. 利用线性代数进行求解：主要是SVD；
+2. 利用非线性优化的方式求解。
+
 ### SVD
+
+定义第i 对匹配点的误差项：
+$$
+\mathbf{e}_i = \mathbf{p}_i - (\mathbf{R} \mathbf{p}^{\prime}_i + \mathbf{t})
+$$
+构建一个最小二乘问题，优化目标是求R, t 使得总体误差平方和最小：
+$$
+\min_{\mathbf{R,t}} J = \frac{1}{2} \sum_{i=1}^n ||\mathbf{p}_i - (\mathbf{R} \mathbf{p}^{\prime}_i + \mathbf{t})||_2^2
+$$
+下面就来推导该最小二乘问题的解法。
 
 ### 非线性优化
 
