--- a/SLAM/特征点法前端.md
+++ b/SLAM/特征点法前端.md
@@ -496,7 +496,57 @@ $$
 $$
 下面就来推导该最小二乘问题的解法。
 
-### 非线性优化
+定义这两组点的质心分别为：
+$$
+\mathbf{p} = \frac{1}{n} \sum_{i=1}^n \mathbf{p}_i,\ \ \mathbf{p}^{\prime} = \frac{1}{n} \sum_{i=1}^n \mathbf{p}_i ^{\prime}
+$$
+对于误差函数，则有
+$$
+\begin{align}
+\frac{1}{2} \sum_{i=1}^n ||\mathbf{p}_i - (\mathbf{R} \mathbf{p}^{\prime}_i + \mathbf{t})||_2^2 & = 
+\frac{1}{2} \sum_{i=1}^n ||\mathbf{p}_i - \mathbf{R} \mathbf{p}^{\prime}_i - \mathbf{t} - \mathbf{p} + \mathbf{R} \mathbf{p}^{\prime} + \mathbf{p} - \mathbf{R} \mathbf{p}^{\prime}||^2_2 \\
+ & = \frac{1}{2} \sum_{i=1}^n || (\mathbf{p}_i - \mathbf{p} - \mathbf{R}(\mathbf{p}_i^{\prime} - \mathbf{p}^{\prime}) ) + (\mathbf{p} - \mathbf{R} \mathbf{p}^{\prime} - \mathbf{t}) ||^2 \\
+ & = \frac{1}{2} \sum_{i=1}^n \{||\mathbf{p}_i - \mathbf{p} - \mathbf{R}(\mathbf{p}_i^{\prime} - \mathbf{p}^{\prime})||^2 +||\mathbf{p} - \mathbf{R} \mathbf{p}^{\prime} - \mathbf{t}||^2 \\ 
+ &+ 2(\mathbf{p}_i - \mathbf{p} - \mathbf{R}(\mathbf{p}_i^{\prime} - \mathbf{p}^{\prime} ) )^T (\mathbf{p} - \mathbf{R} \mathbf{p}^{\prime} - \mathbf{t})\}
+\end{align}
+$$
+注意到展开后的交叉项中$(\mathbf{p}_i - \mathbf{p} - \mathbf{R}(\mathbf{p}_i^{\prime} - \mathbf{p}^{\prime} ) )$ 在求和之后为0，所以误差函数可以简化为
+$$
+\min_{\mathbf{R, t}} J = \frac{1}{2} \sum_{i=1}^n ( ||\mathbf{p}_i - \mathbf{p} - \mathbf{R}(\mathbf{p}_i^{\prime} - \mathbf{p}^{\prime})||^2 +||\mathbf{p} - \mathbf{R} \mathbf{p}^{\prime} - \mathbf{t}||^2)
+$$
+上式之中，求和符号里的第一项只和旋转矩阵R 相关，而第二项则和R, t 都相关。所以求解的**思路**变为通过最小化第一项获得旋转矩阵R，再令第二项为0就得到平移项t。
+
+此时，ICP 就由以下三步求解：
+
+1. 计算两组点的质心p, p'，然后计算各个匹配点的**去质心坐标**：$\mathbf{q}_i = \mathbf{p}_i - \mathbf{p},\ \mathbf{q}_i^{\prime} = \mathbf{p}_i^{\prime} - \mathbf{p}^{\prime}$.
+2. 求解旋转矩阵R：$\mathbf{R}^* = \arg\max\limits_{\mathbf{R}} \frac{1}{2}\sum_{i=1}^n || \mathbf{q}_i - \mathbf{R} \mathbf{q}_i^{\prime} ||^2$.
+3. 根据求得的旋转矩阵计算t：$\mathbf{t}^* = \mathbf{p} - \mathbf{R} \mathbf{p}^{\prime}$
+
+此时，优化问题就转变成了如何求解旋转矩阵R。展开关于R 的误差项：
+$$
+\frac{1}{2}\sum_{i=1}^n || \mathbf{q}_i - \mathbf{R} \mathbf{q}_i^{\prime} ||^2 = \frac{1}{2} \sum_{i=1}^n \mathbf{q}_i^T \mathbf{q}_i + \mathbf{q}^{\prime T}_i \mathbf{R}^T \mathbf{R} \mathbf{q}_i^{\prime}  - 2\mathbf{q}_i^T \mathbf{R} \mathbf{q}^{\prime}_i
+$$
+看到上式中由于$\mathbf{R}^T \mathbf{R}= \mathbf{I}$，前两项和R 都无关。目标函数简化为
+$$
+\sum_{i=1}^n -\mathbf{q}_i^T \mathbf{R} \mathbf{q}_i^{\prime} = \sum_{i=1}^n -tr(\mathbf{R} \mathbf{q}_i^{\prime} \mathbf{q}_i^T) = -tr(\mathbf{R} \sum_{i=1}^n \mathbf{q}^{\prime}_i \mathbf{q}^T_i)
+$$
+为了求解这个优化问题，定义矩阵：
+$$
+\mathbf{W} = \sum_{i=1}^n \mathbf{q}^{\prime}_i \mathbf{q}^T_i
+$$
+W 是一个3 * 3 大小的矩阵，对其进行SVD 分解可得
+$$
+\mathbf{W} = \mathbf{U} \Sigma \mathbf{V}^T
+$$
+其中，$\Sigma$ 是由奇异值组成的对角矩阵，对角线元素从大到小排列；而U 和V 为对角阵。**当W 满秩时**，
+$$
+\mathbf{R} = \mathbf{U} \mathbf{V}^T
+$$
+解得R 后，即可求解t。
+
+###  非线性优化
+
+求解ICP 的另一个方法
 
 
 
