--- a/SLAM/特征点法前端.md
+++ b/SLAM/特征点法前端.md
@@ -546,7 +546,15 @@ $$
 
 ###  非线性优化
 
-求解ICP 的另一个方法
+求解ICP 的另一个方法是使用非线性优化，用迭代的方式去寻找最优解。和SVD 解法一样，优化目标函数可以
 
-
+表达为
+$$
+\min_{\xi} = \frac{1}{2} \sum_{i = 1}^n || (\mathbf{p}_i - \exp(\xi ^{\wedge}) \mathbf{p}^{\prime}_i) ||_2^2
+$$
+待求解的变量为相机位姿T，而单个匹配点对之间的误差项关于位姿的导数可以推导为：
+$$
+\frac{\partial e}{\partial \delta \xi} = - (\exp(\xi^{\wedge}) \mathbf{p}^{\prime}_i)^{\bigodot} = - (\mathbf{T} \mathbf{p}^{\prime}_i) ^{\bigodot}
+$$
+利用非线性优化，即使用高斯牛顿法或列文伯格-马夸尔特法不断迭代，即可求得最优解。
 
