--- a/MachineLearning/9深度学习.md
+++ b/MachineLearning/9深度学习.md
@@ -323,3 +323,111 @@ bn1 = tf.layers.batch_normalization(hidden1, training=training, momentum=0.9)
 bn1_act = tf.nn.elu(bn1)
 ```
 
+### Gradient Clipping
+
+最后，关于梯度爆炸的另一个解决方法就是简单地将梯度限制在一定范围内。该方法称为**Gradient Clipping**。
+
+为此，在优化的时候我们需要先计算出梯度，然后通过模长阈值限制梯度的大小，最后才利用剪切后的梯度来进行优化运算。
+
+```python
+threshold = 1.0
+
+optimizer = tf.train.GradientDescentOptimizer(learning_rate)
+grads_and_vars = optimizer.compute_gradients(loss)
+capped_gvs = [(tf.clip_by_value(grad, -threshold, threshold), var)
+              for grad, var in grads_and_vars]
+training_op = optimizer.apply_gradients(capped_gvs)
+```
+
+## 迁移学习
+
+一般我们应该避免从头训练一个深度神经网络，而应该复用一个已经训练好、用于类似任务的网络，保留其提取底层信息的浅层网络而只训练深层网络，这样的方法叫做**迁移学习** (transfer learning)。
+
+![屏幕快照 2018-04-15 20.57.17](../../../../../Downloads/屏幕快照 2018-04-15 20.57.17.png)
+
+考虑到被冻结的隐层其参数不会发生变化，所以可以预先计算出每个训练样例对应的隐层输出。在训练过程中，就利用这些输出来训练神经网络。这样可以大幅提高训练效率。
+
+对于迁移学习，常用的训练方法有：
+
+- 先冻结所有隐层，只修改输出层。查看此时模型的表现。接着“解冻”最上面的1 - 2 层隐层，利用反向传播来调整其参数。在查看模型的表现是否有提升。如此循环往复。当我们拥有越多训练样例，就可以解锁更多隐层。
+
+- 非监督学习：如果我们有大量未标记的数据，我们可以从第一个隐层开始，利用非监督特征检测算法，如受限玻尔兹曼机，逐层训练神经网络。最后，再利用带标记的数据来对整个模型进行训练、微调。
+
+  ![屏幕快照 2018-04-17 20.37.56](../../../../../Downloads/屏幕快照 2018-04-17 20.37.56.png)
+
+- 最后，我们可以根据训练目的，先训练一个用于类似目的且具有大量标记数据的神经网络。然后利用这个模型来进行迁移学习。或者，我们可以先讲所有未标记的数据标注为good，然后对每个样例加以扰动并标注扰动后对数据为bad。这样，我们就可以预先训练一个区分数据“好坏”的神经网络。
+
+## 损失函数
+
+对于神经网络，我们希望错误越大或越明显，其学习过程能够更快。
+
+###MSE
+
+在之前的回归任务中，我们使用MSE 作为损失函数。在神经网络中，早期也一样使用Sigmoid 函数作为激活函数和MSE 作为损失函数。这样不仅会造成**梯度消失**问题，还会导致收敛速度过慢点问题。
+
+考虑
+$$
+C = \frac{1}{2}(y - \sigma(z)),\ \sigma(z) = \frac{1}{1 + e^{-z}},\ z = \sum_{i=1}^n \omega_i x_i + b
+$$
+则有
+$$
+\begin{align}
+\frac{\partial C}{\partial \omega_i} & = (\sigma(z) - y)  \cdot \sigma^{\prime}(z) \cdot x_i \\
+\frac{\partial C}{\partial b} & = (\sigma(z) - y) \cdot \sigma^{\prime}(z)
+\end{align}
+$$
+由前可知，$\sigma^{\prime}(z)$ 在z 过大或过小点时候梯度为0，此时学习的效率很低，还会有梯度消失、dying unit问题。
+
+### 交叉熵
+
+通过上面对MSE 的分析，我们知道问题集中在$\sigma^{\prime}(z)$ 上。很自然地，我们希望损失函数对于参数的倒数可以不包含它，既为
+$$
+\begin{align}
+\frac{\partial C}{\partial \omega_i} & = (\sigma(z) - y)  \cdot x_i \\
+\frac{\partial C}{\partial b} & = (\sigma(z) - y)
+\end{align}
+$$
+而
+$$
+\frac{\partial C}{\partial b} = \frac{\partial C}{\partial \sigma(z)} \cdot \sigma^{\prime}(z) = \frac{\partial C}{\partial \sigma(z)} \cdot \sigma(z)(1 - \sigma(z))
+$$
+所以
+$$
+\frac{\partial C}{\partial \sigma(z)} = \frac{(\sigma(z) - y)}{\sigma(z)(1 - \sigma(z))}
+$$
+令$a = \sigma(z)$ 表示该神经元的输出，对上式积分就可以得到
+$$
+C = -[y \ln a + (1 - y) \ln (1-a)] + constant
+$$
+注意上式是针对单个单个神经元的，将所有神经元的输出求和取平均，并令积分而得的常数项为零即可得
+$$
+C = - \frac{1}{n} \sum_{i=1}^n [y^{(i)} \ln a^{(i)} + (1 - y^{(i)}) \ln (1 - a^{(i)})]
+$$
+上式极为交叉熵损失函数。
+
+#### 含义
+
+
+
+## 优化器
+
+对于深度神经网络，普通的梯度下降法是远远不够的。为了更好、更快的训练DNN，应该使用其他更为复杂的优化器。
+
+### Momentum Optimization
+
+**思想**：Imagine a bowling ball rolling down a gentle slope on a smooth surface: it will start out slowly, but it will quickly pick up momentum until it eventually reaches terminal velocity.
+
+考虑梯度下降法，为了更新权重w，它计算损失函数J 相对其的导数 (梯度)，再以此更新w：$\omega \leftarrow \omega - \eta \nabla_{\omega} J(\omega)$.
+
+而Momentum Optimization则考虑了此前的梯度。在每次迭代中，它将当前梯度加到一个momentum vector m 上，然后再利用m 来更新w。此时，当前梯度更像是一个加速度。而且为了防止m 过大，算法引入了一个新的参数beta，通常设为0.9。
+$$
+\begin{align}
+\mathbf{m} & \leftarrow \beta \mathbf{m} + \eta \nabla_{\omega} J(\omega) \\
+\omega & \leftarrow \omega - \mathbf{m}
+\end{align}
+$$
+**优点**：
+
+1. Momentum Optimization 有比梯度下降更快的速度逃出plateaus和跳出局部极小；
+2. 由前可知，梯度下降在类别不均衡时对较大的类别下降较快。而Momentum Optimization则对此不敏感。
+
