--- a/MachineLearning/9深度学习.md
+++ b/MachineLearning/9深度学习.md
@@ -431,3 +431,97 @@ $$
 1. Momentum Optimization 有比梯度下降更快的速度逃出plateaus和跳出局部极小；
 2. 由前可知，梯度下降在类别不均衡时对较大的类别下降较快。而Momentum Optimization则对此不敏感。
 
+
+```python
+optimizer = tf.train.MomentumOptimizer(learning_rate = learning_rate, momentum = 0.9)
+```
+
+###Nesterov Accelerate Gradient
+
+NAG 是Momentum Optimization 的一个变体。其**思想**是measure the graident of the cost function not at the local position but slightly ahead in the direction of the momentum。
+$$
+\begin{align}
+\mathbf{m} & \leftarrow \beta \mathbf{m} + \eta \nabla_{\omega} J(\omega + \beta \mathbf{m}) \\
+\omega & \leftarrow \omega - \mathbf{m}
+\end{align}
+$$
+![屏幕快照 2018-04-18 20.19.47](../../../../../Downloads/屏幕快照 2018-04-18 20.19.47.png)
+
+```python
+optimizer = tf.train.MomentumOptimizer(learning_rate = learning_rate, momentum = 0.9, use_nesterov = True)
+```
+
+### AdaGrad
+
+再次考虑类别不平衡的问题，梯度下降法会在数量较大的类别上先收敛。我们希望优化器能尽早发现这个问题，调整方向指向全局最小。
+
+AdaGrad 算法 achieves this by scaling down the gradient vector along the steepest dimensions。
+
+![屏幕快照 2018-04-18 20.47.51](../../../../../Downloads/屏幕快照 2018-04-18 20.47.51.png)
+
+第一个符号代表element-wise multiplication，第二个符号代表element-wise division。
+
+第一个式子将损失函数梯度的平方加到向量s 上。如果cost function is steep along the i-th dimension, 那么s~i~ 就会越来越大；
+
+第二个式子先利用向量s scaling down 损失函数的梯度，再利用其更新权重参数。
+
+该算法减小了更新的梯度，且对于steep dimension（即数量大的类别）见效更大。该方法也称为**adaptive learning rate**。这种方法的一个好处就是对于调整学习率 eta 的需求减小。
+
+![屏幕快照 2018-04-18 20.59.20](../../../../../Downloads/屏幕快照 2018-04-18 20.59.20.png)
+
+AdaGrad 算法对于较简单的二次问题表现良好，但对于神经网络，它往往太早停止。
+
+###RMSProp
+
+AdaGrad 算法衰退太快而无法收敛至全局最小。为了解决这个问题，RMSProp 算法值累加最近几次迭代的梯度。
+
+![屏幕快照 2018-04-18 21.03.06](../../../../../Downloads/屏幕快照 2018-04-18 21.03.06.png)
+
+这里衰减率 beta 通常设定为0.9。
+
+```python
+optimizer = tf.train.RMSPropOptimizer(learning_rate = learning_rate, momentum = 0.9, decay = 0.9, epsilon = 1e-10)
+```
+
+### Adam Optimization
+
+Adam 意为 adaptive moment estimation，结合了Momentum Optimization 和RMSProp 二者的思想：just like Momentum Optimization it keeps track of an exponentially decaying average of past gradients, and just like RMSProp it keeps track of an exponentially decaying average of past squared gradients.
+
+![屏幕快照 2018-04-18 21.14.47](../../../../../Downloads/屏幕快照 2018-04-18 21.14.47.png)
+
+这里，T 从1开始，代表迭代次数。
+
+通常，momentum decay hyperparameter beta1 通常设置为0.9，scaling decay hyperparameter beta2 则常设置为0.999。
+
+```python
+optimizer = tf.train.AdamOptimizer(learning_rate = learning_rate)
+```
+
+由于Adam 也是一个adaptive learning rate 算法，其对于学习率eta 的设置要求较低，默认值通常为0.001.
+
+### 小结
+
+上述介绍的优化器最后都会产生一个稠密模型 (dense model)。为了节省内存空间和加速计算，有时我们想要个稀疏模型 (sparse model)。有三种方法：
+
+- 直接设置数值很小的权重为0；
+- 使用**l1 正则化**，强迫优化器精简权重参数；
+- 利用**Dual Averaging**，也称为**Follow The Regularized Leader** (FTRL)。
+
+### Learning rate scheduling
+
+对于非adaptive learning rate 算法，学习率的设置十分关键。通常的**策略**是：在开始时使用一个较大的学习率加快收敛速度，然后逐渐减小避免震荡或发散。常见的learning schedules 有
+
+- Predetermined piecewise constant learning rate：设置一个学习率集，从第一个学习率eta0 开始，经过n 次迭代就试用下一个学习率eta1；如此循环；
+- Performance scheduling：每经过n 次迭代就计算一次validation error，若错误率停止下降或下降缓慢就reduceing the learning rate by a factor of lambda；
+- Exponential scheduling：将学习率设置为迭代次数t 的函数：$\eta(t) = \eta_0 \cdot 10^{-\frac{t}{r}}$，即每经过r 次迭代，学习率就被除以10。除了初始学习率eta0，还有参数r 需要设置；
+- Power scheduling：$\eta(t) = \eta_0 \cdot (1 + \frac{t}{r})^{-c}$。这里c 通常设置为1。该方法和exponential scheduling 相似，但学习率衰退地较慢。
+
+```python
+initial_learning_rate = 0.1
+    decay_steps = 10000
+    decay_rate = 1/10
+    global_step = tf.Variable(0, trainable=False, name="global_step")
+    learning_rate = tf.train.exponential_decay(initial_learning_rate, global_step, decay_steps, decay_rate)
+```
+
+而对于AdaGrad, RMSProp 和Adam 等可以在训练时自行调整学习率的算法，则不需要额外的学习率调整策略。
