--- a/MachineLearning/9深度学习.md
+++ b/MachineLearning/9深度学习.md
@@ -343,7 +343,7 @@ training_op = optimizer.apply_gradients(capped_gvs)
 
 一般我们应该避免从头训练一个深度神经网络，而应该复用一个已经训练好、用于类似任务的网络，保留其提取底层信息的浅层网络而只训练深层网络，这样的方法叫做**迁移学习** (transfer learning)。
 
-![屏幕快照 2018-04-15 20.57.17](../../../../../Downloads/屏幕快照 2018-04-15 20.57.17.png)
+![屏幕快照 2018-04-15 20.57.17](9/屏幕快照 2018-04-15 20.57.17.png)
 
 考虑到被冻结的隐层其参数不会发生变化，所以可以预先计算出每个训练样例对应的隐层输出。在训练过程中，就利用这些输出来训练神经网络。这样可以大幅提高训练效率。
 
@@ -353,7 +353,7 @@ training_op = optimizer.apply_gradients(capped_gvs)
 
 - 非监督学习：如果我们有大量未标记的数据，我们可以从第一个隐层开始，利用非监督特征检测算法，如受限玻尔兹曼机，逐层训练神经网络。最后，再利用带标记的数据来对整个模型进行训练、微调。
 
-  ![屏幕快照 2018-04-17 20.37.56](../../../../../Downloads/屏幕快照 2018-04-17 20.37.56.png)
+  ![屏幕快照 2018-04-17 20.37.56](9/屏幕快照 2018-04-17 20.37.56.png)
 
 - 最后，我们可以根据训练目的，先训练一个用于类似目的且具有大量标记数据的神经网络。然后利用这个模型来进行迁移学习。或者，我们可以先讲所有未标记的数据标注为good，然后对每个样例加以扰动并标注扰动后对数据为bad。这样，我们就可以预先训练一个区分数据“好坏”的神经网络。
 
@@ -445,7 +445,7 @@ $$
 \omega & \leftarrow \omega - \mathbf{m}
 \end{align}
 $$
-![屏幕快照 2018-04-18 20.19.47](../../../../../Downloads/屏幕快照 2018-04-18 20.19.47.png)
+![屏幕快照 2018-04-18 20.19.47](9/屏幕快照 2018-04-18 20.19.47.png)
 
 ```python
 optimizer = tf.train.MomentumOptimizer(learning_rate = learning_rate, momentum = 0.9, use_nesterov = True)
@@ -457,7 +457,7 @@ optimizer = tf.train.MomentumOptimizer(learning_rate = learning_rate, momentum =
 
 AdaGrad 算法 achieves this by scaling down the gradient vector along the steepest dimensions。
 
-![屏幕快照 2018-04-18 20.47.51](../../../../../Downloads/屏幕快照 2018-04-18 20.47.51.png)
+![屏幕快照 2018-04-18 20.47.51](9/屏幕快照 2018-04-18 20.47.51.png)
 
 第一个符号代表element-wise multiplication，第二个符号代表element-wise division。
 
@@ -467,7 +467,7 @@ AdaGrad 算法 achieves this by scaling down the gradient vector along the steep
 
 该算法减小了更新的梯度，且对于steep dimension（即数量大的类别）见效更大。该方法也称为**adaptive learning rate**。这种方法的一个好处就是对于调整学习率 eta 的需求减小。
 
-![屏幕快照 2018-04-18 20.59.20](../../../../../Downloads/屏幕快照 2018-04-18 20.59.20.png)
+![屏幕快照 2018-04-18 20.59.20](9/屏幕快照 2018-04-18 20.59.20.png)
 
 AdaGrad 算法对于较简单的二次问题表现良好，但对于神经网络，它往往太早停止。
 
@@ -475,7 +475,7 @@ AdaGrad 算法对于较简单的二次问题表现良好，但对于神经网络
 
 AdaGrad 算法衰退太快而无法收敛至全局最小。为了解决这个问题，RMSProp 算法值累加最近几次迭代的梯度。
 
-![屏幕快照 2018-04-18 21.03.06](../../../../../Downloads/屏幕快照 2018-04-18 21.03.06.png)
+![屏幕快照 2018-04-18 21.03.06](9/屏幕快照 2018-04-18 21.03.06.png)
 
 这里衰减率 beta 通常设定为0.9。
 
@@ -487,7 +487,7 @@ optimizer = tf.train.RMSPropOptimizer(learning_rate = learning_rate, momentum = 
 
 Adam 意为 adaptive moment estimation，结合了Momentum Optimization 和RMSProp 二者的思想：just like Momentum Optimization it keeps track of an exponentially decaying average of past gradients, and just like RMSProp it keeps track of an exponentially decaying average of past squared gradients.
 
-![屏幕快照 2018-04-18 21.14.47](../../../../../Downloads/屏幕快照 2018-04-18 21.14.47.png)
+![屏幕快照 2018-04-18 21.14.47](9/屏幕快照 2018-04-18 21.14.47.png)
 
 这里，T 从1开始，代表迭代次数。
 
@@ -525,3 +525,103 @@ initial_learning_rate = 0.1
 ```
 
 而对于AdaGrad, RMSProp 和Adam 等可以在训练时自行调整学习率的算法，则不需要额外的学习率调整策略。
+
+## 正则化
+
+### 早停
+
+避免过拟合的一个简单且有效的方法就是早停：当模型在**验证集**上的表现超过N 次迭代没有提高时即可停止训练。
+
+### l1 和l2 正则化
+
+此外，也利用l1 和l2 正则化来限制神经网络中的**连接权**（不包括bias term）。需要注意的是在tensorflow 中需要显示地把正则化损失 (regularization loss) 加入到总的损失中。
+
+```python
+W1 = tf.get_default_graph().get_tensor_by_name("hidden1/kernel:0")
+W2 = tf.get_default_graph().get_tensor_by_name("outputs/kernel:0")
+reg_loss = regularizer(weights1) + regularizer(weights2)
+loss = tf.add(base_loss, scale * reg_losses, name="loss")
+```
+
+或者
+
+```python
+l2_regularizer = tf.contrib.layers.l2_regularizer(l2_reg)
+my_dense_layer = partial(tf.layers.dense,
+                         activation=tf.nn.elu,
+                         kernel_initializer=he_init,
+                         kernel_regularizer=l2_regularizer)
+```
+
+但同样需要显式将正则化损失加入总损失。
+
+### Dropout
+
+最受欢迎的正则化方式是Dropout。其**思想**很简单：在每一次训练迭代中，每一个神经元（包括输入神经元，但不包括输出）都以一定概率p **临时“失效”**，即该神经元会在这次训练中被忽视。p 称为**dropout rate**，通常设置为0.5。训练结束后，则不再有drop out。
+
+![屏幕快照 2018-04-19 20.50.47](9/屏幕快照 2018-04-19 20.50.47.png)
+
+Dropout 之所以有效是因为它迫使模型不能过于依赖于某个神经元，或者说，它使得每个神经元都必须具备一定的泛化能力以备随时替代其他失效的神经元。
+
+此外，假设p = 0.5，那么在测试或使用模型时，一个神经元会被connected to twice as many input neurons as it was on average during training。所以，在训练结束后，需要将每个输入连接权乘以**keep probability** (1 - p)。
+
+在tensorflow 中，这些技术细节都被照顾好了。
+
+```python
+dropout_rate = 0.5  # == 1 - keep_prob
+X_drop = tf.layers.dropout(X, dropout_rate, training=training)
+hidden1 = tf.layers.dense(X_drop, n_hidden1, activation=tf.nn.relu, name="hidden1")
+hidden1_drop = tf.layers.dropout(hidden1, dropout_rate, training=training)
+```
+
+只需在训练中设置training 为True 而在使用中设置其为False。
+
+Dropout 还有一个变体*Dropconnect*：单个连接权会随机地被dropped 而不是整个神经元。
+
+### Max-Norm Regularization
+
+另一个很受欢迎的正则化技术是max-norm regularization。对于每个神经元，限制其连接权的模长：$||\omega||_2 \le r$。
+
+常见做法就是在每一步训练结束后，计算连接权模长并对其加以限制：$\omega \leftarrow w \frac{r}{||w||_2}$。
+
+Max-norm Regularization 也可以帮助解决梯度消失/爆炸的问题。
+
+通常在模型构建完、初始化前进行正则化：
+
+```Python
+threshold = 1.0
+weights = tf.get_default_graph().get_tensor_by_name("hidden1/kernel:0")
+clipped_weights = tf.clip_by_norm(weights, clip_norm=threshold, axes=1)
+clip_weights = tf.assign(weights, clipped_weights)
+```
+
+且必须在会话 (session) 中显示执行：
+
+```python
+clip_weights.eval()
+```
+
+或者自己定义一个kernel regularization 方法：
+
+```python
+def max_norm_regularizer(threshold, axes=1, name="max_norm", collection="max_norm"):
+    def max_norm(weights):
+        clipped = tf.clip_by_norm(weights, clip_norm=threshold, axes=axes)
+        clip_weights = tf.assign(weights, clipped, name=name)
+        tf.add_to_collection(collection, clip_weights)
+        return None # there is no regularization loss term
+    return max_norm
+```
+
+```Python 
+hidden1 = tf.layers.dense(X, n_hidden1, activation=tf.nn.relu, kernel_regularizer=max_norm_reg, name="hidden1")
+```
+
+使用max-norm regularization 不需要将正则化损失加入总损失中。但在上述方法中我们还需要利用一个handle 来执行操作：
+
+```python
+clip_all_weights = tf.get_collection("max_norm")
+(会话中)
+sess.run(clip_all_weights)
+```
+
