--- a/MachineLearning/9深度学习.md
+++ b/MachineLearning/9深度学习.md
@@ -323,6 +323,22 @@ bn1 = tf.layers.batch_normalization(hidden1, training=training, momentum=0.9)
 bn1_act = tf.nn.elu(bn1)
 ```
 
+会话时，需要显式执行BN：
+
+```python
+sess.run([training_op, extra_update_ops], feed_dict={training: True, X: X_batch, y: y_batch})
+```
+
+或在建图时加入到training_op 中：
+
+```python
+with tf.name_scope("train"):
+    optimizer = tf.train.GradientDescentOptimizer(learning_rate)
+    extra_update_ops = tf.get_collection(tf.GraphKeys.UPDATE_OPS)
+    with tf.control_dependencies(extra_update_ops):
+        training_op = optimizer.minimize(loss)
+```
+
 ### Gradient Clipping
 
 最后，关于梯度爆炸的另一个解决方法就是简单地将梯度限制在一定范围内。该方法称为**Gradient Clipping**。
