--- a/SLAM/直接法前端.md
+++ b/SLAM/直接法前端.md
@@ -1,8 +1,101 @@
 # 直接法前端
 
-## 引出
+## 特征点法和直接法的讨论
+
+特征点法不可避免的会有以下几个缺点：
+
+- 特征点的提取和描述子的计算非常耗时；
+- 只使用特征点，而忽略了图像上的其他信息；
+- 在**纹理缺失**的情况下容易失效。
+
+为了克服这些缺点，产生了以下几个思路：
+
+- 仍然提取特征点，但**不计算描述子**。使用**光流法** (Optical Flow) 来跟踪特征点的运动；
+- 同样只提取特征点但不计算描述子，使用**直接法** (Direct Method) 来计算特征点的运动；
+- **既不提取特征点，也不计算描述子**，根据图像间的**像素灰度差异**，**直接**计算相机的运动。
+
+对于第一种方法，只是把描述子计算和特征匹配替换成了光流跟踪。之后仍然要靠前一讲介绍的方法来计算相机位姿。对于后两种方法，我们可以直接来计算、优化相机位姿，故称为**直接法**。
+
+在直接法中，我们不明确的计算点与点之间的对应关系（特征匹配），单纯计算像素（或像素块）亮度之间的差异，**最小化光度误差** (Photometric error) 来求得相机位姿。因此，直接法要求场景中存在**明暗变化**即可（不必如特征点法般要求有梯度）。根据所使用的像素的数量，直接法分为稀疏、半稠密和稠密三种。所以直接法也拥有恢复半稠密或稠密地图的能力。
 
 ## 光流
+
+直接法由光流演变而来。光流是一种描述像素随时间在图像之间运动的方法。随着时间的流逝（机器人的运动），一个像素会在图像中“运动”，即从上一张图像的某个位置运动到下一张图像的另一个位置。而我们希望能够求得这个运动。
+
+其中，只追踪部分像素或特征点的方法称为*稀疏光流*，而计算所有像素的称为*稠密光流*。稀疏光流以Lucas - Kanada 光流为代表。这里介绍的也是LK 光流。
+
+### LK 光流
+
+在LK 光流中，通过相机获得的图像被看作是时间的函数，记为 I(t)。那么对于像素坐标为 (x, y) 的像素，其灰度可以写为 I(x, y, t)。
+
+对于t 时刻位于 (x, y) 处的像素，假设其t + dt 时刻运动到了(x + dx, y + dy) 处。根据光流法的基本假设，**灰度不变假设**：同一个空间点的像素灰度值在各个图像中是**固定不变**的。我们就得到了：
+$$
+\mathbf{I} (x + dx, y + dy, t + dt) = \mathbf{I} (x, y, t)
+$$
+显然，灰度不变假设在现实中很难成立。一般认为在相机运动运动很微小（运动连续）的情况下近似成立，此时上式带有少量误差。
+
+先认为假设成立，对上式左侧进行泰勒一阶展开可得：
+$$
+\mathbf{I}(x + dx, y + dy, t + dt) \approx \mathbf{I}(x, y, t) + \frac{\partial \mathbf{I}}{\partial x} dx + \frac{\partial \mathbf{I}}{\partial y} dy + \frac{\partial \mathbf{I}}{\partial t} dt
+$$
+考虑式 (1) （灰度不变假设），即可得到：
+$$
+\frac{\partial \mathbf{I}}{\partial x} dx + \frac{\partial \mathbf{I}}{\partial y} dy + \frac{\partial \mathbf{I}}{\partial t} dt = 0
+$$
+两边除以dt 可得：
+$$
+\frac{\partial \mathbf{I}}{\partial x} \frac{dx}{dt} + \frac{\partial \mathbf{I}}{\partial y} \frac{dy}{dt} = - \frac{\partial \mathbf{I}}{\partial t}
+$$
+其中，dx/dt 是该像素在x 轴上的**运动速度**，dy/dt 是其在y 轴上的速度，记为u, v。而$\frac{\partial \mathbf{I}}{\partial x}$ 为该像素在x 方向上的**梯度**，另一项则为在y 方向上的梯度，分别记为Ix, Iy。同时把上式写成矩阵形式就有：
+$$
+\begin{bmatrix}
+\mathbf{I}_x & \mathbf{I}_y
+\end{bmatrix}
+\begin{bmatrix}
+u \\ v
+\end{bmatrix} = -\mathbf{I}_t
+$$
+上式中，待求解的未知数为速度u, v。（这里对于$\mathbf{I}_t$ 如何计算不是很清楚，是时间差么？）这个式子是一个二元一次方程。要求解它需要引入额外的约束。
+
+在LK 光流中，我们假设**该像素临域内的所有像素都具有相同的运动**。因此，考虑一个大小为w * w 的图像块，它含有$w^2$ 个像素。此时，我们就有了$w^2$ 个方程：
+$$
+\begin{bmatrix}
+\mathbf{I}_x & \mathbf{I}_y
+\end{bmatrix}_k
+\begin{bmatrix}
+u \\ v
+\end{bmatrix} = -\mathbf{I}_{tk},\ k = 1, \ldots, w^2
+$$
+记
+$$
+\mathbf{A} = \begin{bmatrix}
+[\mathbf{I}_x,\ \mathbf{I}_y]_1 \\
+\vdots \\
+[\mathbf{I}_x,\ \mathbf{I}_y]_k \\
+\end{bmatrix},\ 
+\mathbf{b} = \begin{bmatrix}
+\mathbf{I}_{t1} \\
+\vdots \\
+\mathbf{I}_{tk}
+\end{bmatrix}
+$$
+于是整个方程就可以写为：
+$$
+\mathbf{A}
+\begin{bmatrix}
+u \\ v
+\end{bmatrix} = -\mathbf{b}
+$$
+这是一个超定方程，根据我们在 *非线性优化* 中的推导，该方程的**最小二乘解**为：
+$$
+\begin{bmatrix}
+u \\ v
+\end{bmatrix}^*
+= -(\mathbf{A}^T \mathbf{A})^{-1} \mathbf{A}^T \mathbf{b}
+$$
+这样，我们就求得了像素在图像间的运动速度u, v。当t 取离散时间序列时，我们可以估计某个像素在若干张图像之间的运动及其出现的位置。考虑到图像梯度仅在局部有效，和LK 光流本身的假设，可以多次迭代以求得更精确的解。
+
+根据LK 光流我们可以直接得到特征点之间的对应关系，但与特征匹配不同的是，LK 光流更经常遇到特征点跟丢的情况而不是无匹配。而且光流法的速度往往比特征点法快。最后，如前所述，LK 光流要求相机运动是**微小**的，这使得其健壮性比描述子差一些。
 
 ## 直接法
 
