--- a/SLAM/直接法前端.md
+++ b/SLAM/直接法前端.md
@@ -99,3 +99,23 @@ $$
 
 ## 直接法
 
+对于一对图像，假设有某个空间点P，其世界坐标为[X, Y, Z]，其对应的像点的**非齐次**像素坐标为p1, p2。我们的求解目标是**第一个相机到第二个相机**的位姿变换。以第一个相机为参照，则第二个相机的旋转和平移为R 和t。相机矩阵为K，则有
+$$
+\mathbf{p}_1 = 
+\begin{bmatrix}
+u \\ v \\ 1
+\end{bmatrix}_1 = \frac{1}{Z_1} \mathbf{K} \mathbf{P}
+$$
+
+$$
+\mathbf{p}_2 =
+\begin{bmatrix}
+u \\ v \\ 1
+\end{bmatrix}_2 = \frac{1}{Z_2} \mathbf{K} (\mathbf{R} \mathbf{P} + \mathbf{t}) = \frac{1}{Z_2} \mathbf{K} (\exp(\xi)^{\wedge} \mathbf{P})_{1:3}
+$$
+
+其中，Z1 为P 在第一个相机下的深度，Z2 为其在第二个相机坐标系下的深度。
+
+在直接法中，由于不计算描述子，不进行特征匹配，因此我们并没有特征点间的对应关系，即不知道第二张相片上哪一个点p2 对应着第一张相片上的p1。
+
+对此，直接法的**思路**为给位姿一个初始估计T（猜测），由当前的估计值来寻找p2 的位置。若给出的位姿估计很差，那么p2 的外观（亮度）会和p1 有明显区别。为了减小这个差别，我们不断调整相机位姿，来寻找和p1 更相似的p2。即通过**优化**的方法来求解T。
